# aros-developer-portal

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  README.md  vitest.config.ts
.github/workflows/: standard-ci.yml
examples/android-example/: README.md  build.gradle.kts
examples/aspnet-example/: Program.cs  README.md
examples/aspnet-example/Controllers/: OrdersController.cs  ProductsController.cs
examples/django-example/: README.md
examples/django-example/config/: settings.py  urls.py
examples/django-example/dashboard/: admin.py  middleware.py  models.py  services.py  views.py
examples/django-example/dashboard/templates/: dashboard.html
examples/fastapi-example/: README.md  main.py
examples/react-example/: README.md  index.html  package.json
examples/react-example/lib/: ShreSDK.js
examples/react-example/src/: App.jsx
examples/react-example/src/components/: EventLog.jsx  (+2 more)
portal/: index.html  package-lock.json  package.json  server.mjs  server.test.mjs  vite.config.js
portal/src/: App.jsx
portal/src/styles/: global.css
scripts/: check-env.sh  claim.sh  e2e.sh  preflight-claim.sh  setup.sh  start.sh  test.sh
sdks/: DELIVERABLES-SUMMARY.md  SDK-TEST-INDEX.md  SHARED-SDK-SPEC.md  TEST-CHECKLIST.md  TEST-CONTRACT.md  TESTING.md  contracts.test.json
sdks/dotnet/: Aros.POS.SDK.csproj  ArosPOS.cs  ArosPOSConfig.cs  Models.cs  ShreSDK.Tests.csproj  ShreSDKTests.cs
sdks/javascript/: README.md  index.ts  package.json  tsconfig.json
sdks/javascript/v2/: README.md  index.ts  package.json  tsconfig.json  vitest.config.ts
sdks/kotlin/: build.gradle.kts
sdks/python/: pyproject.toml
sdks/python/aros_pos/: __init__.py  client.py  types.py
sdks/python/shreai_sdk/: client.py  models.py
sdks/python/tests/: test_shreai_sdk.py
sdks/python/v2/: pyproject.toml  shreai.py
sdks/rest/: openapi.yaml
sdks/swift/: Package.swift
sdks/swift/v2/: Package.swift  README.md
(+10 files in other folders)
