[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aros-pos-sdk"
version = "1.0.0"
description = "Python SDK for the AROS Connexus POS API — zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Nirlab Inc", email = "dev@nirlab.co"},
]
keywords = ["aros", "pos", "retail", "sdk", "connexus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://developer.aros.sh"
Documentation = "https://developer.aros.sh/sdks/python"
Repository = "https://github.com/nirlabinc/aros-developer-portal"

[tool.setuptools.packages.find]
include = ["aros_pos*"]
